<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleRating"
            style="@style/TextView.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/product_rating_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRating"
            style="@style/TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/product_rating"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/very_big_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleRating" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalRating"
            style="@style/TextView.SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/product_rating_total"
            app:layout_constraintBottom_toBottomOf="@id/tvRating"
            app:layout_constraintStart_toEndOf="@id/tvRating"
            app:layout_constraintTop_toTopOf="@id/tvRating" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLastComment"
            style="@style/TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/product_rating_last_comment"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRating" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLastCommentName"
            style="@style/TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/product_rating_last_comment_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLastComment" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvComment"
            style="@style/TextView.Title"
            android:textStyle="normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/product_rating_comment"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLastCommentName"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>